--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!doctype html>
 <html lang="fr">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Avril</title>
-<link rel="stylesheet" href="./assets/css/styles.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Avril</title>
+  <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 <body>
-<header class="site-header">
-<nav class="nav">
-<a href="#/settings" class="nav__link" data-nav>Paramètres</a>
-<a href="#/play" class="nav__link" data-nav>Jouer</a>
-</nav>
-</header>
+  <header class="site-header">
+    <nav class="nav">
+      <a href="#/settings" class="nav__link" data-nav>Paramètres</a>
+      <a href="#/games" class="nav__link" data-nav>Jeux</a>
+      <a href="#/play" class="nav__link" data-nav>Jouer</a>
+    </nav>
+  </header>
 
+  <main id="app" class="container" aria-live="polite"></main>
 
-<main id="app" class="container" aria-live="polite"></main>
+  <footer class="site-footer">Avril — Mini-jeux</footer>
 
-
-<footer class="site-footer">Avril — Mini-jeux</footer>
-
-
-<script type="module" src="./js/app.js"></script>
+  <script type="module" src="./js/app.js"></script>
 </body>
 </html>
